# python-project-lvl1

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter-check.yml
brain_games/: __init__.py  cli.py  even_numbers.py  game.py
brain_games/games/: calc.py  even.py  even_numbers.py  game.py  gcd.py  prime.py  prime_numbers.py  progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
