[tool.poetry]
name = "hexlet-code"
version = "0.5.4"
description = "Learning project with simple math games in CLI"
authors = ["Al Semenov <alncaatl@gmail.com>"]
repository = "https://github.com/ncaatl/python-project-lvl1"
packages = [
  { include = "brain_games" },
]
classifiers = [
  "Topic :: Education",
  "Topic :: Games/Entertainment",
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
  "Environment :: Console",
  "Intended Audience :: Education",
  "License :: Freeware",
  "Natural Language :: English",
]

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
